UPDATES IssueDetail and ProjectIssues components; refines layout and styling for improved readability, enhances priority indicators, and adjusts CSS for better visual consistency.

--- a/src/styles/IssueDetail.module.css
+++ b/src/styles/IssueDetail.module.css
@@ -1,7 +1,7 @@
 .project {
     background-color: #eaeadb;
     border: 1px solid #dadadf;
-    border-radius: 2px;
+    border-radius: 5px;
     text-align: center;
     max-width: 80rem;
     padding: 2rem 2rem;
@@ -19,7 +19,7 @@
     color: black;
     border: 1px solid black;
     padding: .2rem .4rem .4rem .4rem;
-    border-radius: 10%;
+    border-radius: 5px;
     font-size: 1.2rem;
     margin-left: .5rem;
 }
@@ -85,36 +85,43 @@
     
 }
 
-.highPriority {
-    border: 1px solid black;
-    background-color: rgb(255, 150, 13);
-    color: rgb(77, 74, 74);
+.criticalPriority {
+    border: 4px solid red;
+    
+    color: red;
+    border-radius: 10px;
+    padding: .2rem .5rem .4rem .5rem;
+    border-radius: 10%;
+   
+  }
+  
+  .highPriority {
+    border: 4px solid  rgb(255, 150, 13);
+    color: rgb(255, 150, 13);
     border-radius: 5%;
     padding: .3rem .6rem .5rem .6rem;
     border-radius: 10%;
-    
-}
-
-.mediumPriority {
-    border: 1px solid black;
-    background-color: yellow;
-    color: black;
+ 
+  }
+  
+  .mediumPriority {
+    border: 5px solid  yellow;
+    color:rgb(126, 128, 49);
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
     
-}
-
+  }
+  
   .lowPriority {
-    border: 1px solid black;
-    background-color: rgb(68, 128, 0);
-    color: white;
+    border: 4px solid rgb(68, 128, 0);
+
+    color: rgb(68, 128, 0);
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
-    
-}
-
+   
+  }
 .rowAlign {
     margin-top: 1.3rem;
 }
