--- a/src/styles/ProjectIssues.module.css
+++ b/src/styles/ProjectIssues.module.css
@@ -24,8 +24,12 @@
     background-color: rgb(255, 255, 255);
     border: 1px solid black;
     padding: .2rem .4rem .4rem .4rem;
-    border-radius: 10%;
-    font-size: 1.2rem;
+    border-radius: .3rem;
+    font-size: 1.3rem;
+   
+ 
+    
+    
 }
 
 .issueLink {
@@ -38,25 +42,30 @@
 }
 
 .issueCard {
-    background-color: #ece6e6;
+    background-color: #fffbfb;
     border: 3px solid black;
     padding: 1rem;
 }
+.issueContentCard {
+  background-color: #ffffff;
+  border: 2px solid black;
+  padding: 1rem;
+}
+
 
 .criticalPriority {
-    border: 1px solid black;
-    background-color: red;
-    color: white;
-    border-radius: 5%;
+    border: 4px solid red;
+    
+    color: red;
+    border-radius: 10px;
     padding: .2rem .5rem .4rem .5rem;
     border-radius: 10%;
    
   }
   
   .highPriority {
-    border: 1px solid black;
-    background-color: rgb(255, 150, 13);
-    color: rgb(77, 74, 74);
+    border: 4px solid  rgb(255, 150, 13);
+    color: rgb(255, 150, 13);
     border-radius: 5%;
     padding: .3rem .6rem .5rem .6rem;
     border-radius: 10%;
@@ -64,9 +73,8 @@
   }
   
   .mediumPriority {
-    border: 1px solid black;
-    background-color: yellow;
-    color: black;
+    border: 5px solid  yellow;
+    color:rgb(126, 128, 49);
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
@@ -74,9 +82,9 @@
   }
   
   .lowPriority {
-    border: 1px solid black;
-    background-color: rgb(68, 128, 0);
-    color: white;
+    border: 4px solid rgb(68, 128, 0);
+
+    color: rgb(68, 128, 0);
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
@@ -90,7 +98,7 @@
   margin-left: 0.5rem;
   background-color: rgb(153, 218, 80);
   padding: 0.4rem;
-  border-radius: 15%;
+  border-radius: 8px;
 }
 
 .AlertModal {
